<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_library"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="@string/navigation_library"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/navigation_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_box"
        android:title="@string/navigation_profile"
        app:showAsAction="ifRoom" />
</menu>