<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    app:cardBackgroundColor="@color/colorPrimaryWhite">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_book_photo_CBI"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tv_book_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/iv_book_photo_CBI"
            android:layout_marginStart="111dp"
            android:text="@string/card_name_title" />

        <TextView
            android:id="@+id/tv_book_name_CBI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_book_photo_CBI"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/tv_book_name_title" />

        <TextView
            android:id="@+id/tv_book_author_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_book_name_title"
            android:layout_below="@+id/tv_book_name_title"
            android:layout_marginTop="6dp"
            android:text="@string/card_author_title" />

        <TextView
            android:id="@+id/tv_book_author_CBI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_book_name_title"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/tv_book_author_title" />

        <TextView
            android:id="@+id/tv_book_year_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_book_author_title"
            android:layout_below="@+id/tv_book_author_title"
            android:layout_marginTop="6dp"
            android:text="@string/card_year_title" />

        <TextView
            android:id="@+id/tv_book_year_CBI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_book_author_title"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/tv_book_year_title" />
    </RelativeLayout>
</android.support.v7.widget.CardView>